# webview

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lib.ring  main.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  ubuntu_build.yml  windows_build.yml
docs/: REFERENCE.md  USAGE.md
examples/: 01_basic.ring  02_navigate.ring  03_local_html.ring  04_callbacks.ring  05_inject_eval_callback.ring  06_digital_clock.ring  06_showcase.ring  07_digital_clock.ring  07_form_input.ring  08_counter_sync.ring  09_form_input.ring  09_showcase.ring  10_login_form.ring  10_theme_switcher.ring  11_theme_switcher.ring  11_unbind.ring  12_color_palette.ring  12_unbind.ring  13_qr_code_generator.ring  13_to_do_list.ring  14_chart.ring  14_live_markdown_editor.ring  15_color_palette.ring  15_login_form.ring  16_qr_code_generator.ring  16_to_do_list.ring  17_chart.ring  17_live_markdown_editor.ring  18_http_fetch.ring  19_drawing.ring  19_quote_generator.ring  20_avatar_quotes.ring  20_tic_tac_toe.ring  21_bind_many.ring  21_prayer_times.ring  22_chat_bot.ring  22_using_class_methods.ring  23_mock_pos.ring  24_ringfetch.ring  24_using_dialog.ring  (+32 more)
examples/assets/: index.html  ring.js
lib/macos/amd64/: libring_webview.dylib
lib/macos/arm64/: libring_webview.dylib
src/: ring_webview.c  webview.rh  webview.ring
src/c_src/: ring_webview.c  ring_webview_macos.h  ring_webview_macos.m
src/utils/: color.ring  install.ring  remove.ring  uninstall.ring
